2012-08-21 John Wu <John dot Wu at ACM dot org>
	* src/query.h, src/query.cpp: clarify the arguments of the
	constructor and the user of recovery feature.
	* src/bitvector.cpp, src/bitvector64.cpp: reserve the exact size
	when writing the serialized version, this should make it possible
	to write many bitvectors into a single buffer

2012-08-20 John Wu <John dot Wu at ACM dot org>
	* src/selectParser.yy, src/selectClause.h, src/selectClause.cpp,
	src/bundles.cpp, src/colValues.cpp: add support for aggregation
	function group_concat (requested by Michael Beauregard
	michael at insightfulminds.com)
	* src/colValues.h:803 explicitly choose between CATEGORY or TEXT,
	previously this was enforced by the constructor of
	ibis::colStrings, however group_concat makes it possible to
	generate strings from any type

2012-08-17 John Wu <John dot Wu at ACM dot org>
	* src/qExpr.h:616 the copy constructor of ibis::qKeyword assigns
	the wrong type
	* tests/Makefile.am: add test case 12 to check-text to exercise
	the issue raised by Aditya <nerur00 at gmail.com>

2012-08-16 John Wu <John dot Wu at ACM dot org>
	* tests/Makefile.am: add space between [` to correct problems with
	some versions of bourne sh involve test case 14 - 17 of target
	really-small

2012-08-15 John Wu <John dot Wu at ACM dot org>
	* src/util.h, src/util.cpp: add a new variant of readString that
	directly works with the incoming string

2012-08-14 John Wu <John dot Wu at ACM dot org>
	* tests/jrf.cpp: quote the strings containing spaces in js (which
	uses spaces as separator for keywords), mark ' ' as delimiter
	explicitly in the index specification to avoid the default
	delimiter handling
	* tests/scripts/jrf-check.pl: use operator CONTAINS instead of
	borrowing the operator = in searching for keywords within text
	fields

2012-08-13 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: replace all logMessage cal with LOGGER
	* src/parti.cpp: call cleaner and purgeIndexFiles in purgeInactive